--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^0.26.1",
+    "axios-observable": "^1.4.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
+    "rxjs": "^7.5.5",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
