feat(i18n): add i18n dependency

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/react-dom": "^18.0.0",
     "axios": "^0.26.1",
     "axios-observable": "^1.4.0",
+    "i18next": "^21.6.16",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-i18next": "^11.16.7",
     "react-scripts": "5.0.1",
     "rxjs": "^7.5.5",
     "typescript": "^4.4.2",
